k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: mateus4k/helloworld
          resources:
            limits:
              memory: 128Mi
              cpu: 50m
          ports:
            - containerPort: 3000
